--- a/package.json
+++ b/package.json
@@ -228,6 +228,7 @@
     "plop": "2.0.0",
     "pre-commit": "1.2.2",
     "prettier": "1.13.5",
+    "react-jsonschema-form": "^1.0.3",
     "react-test-renderer": "16.4.1",
     "rimraf": "2.6.2",
     "shelljs": "0.8.2",
